# s6r-bitwarden-cli

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/s6r_bitwarden_cli/: __init__.py  __main__.py  bitwarden.py
