[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s6r-bitwarden-cli"
version = "1.0.7"
description = "Interact easily with Bitwarden client"
readme = "README.md"
authors = [{ name = "Michel Perrocheau", email = "michel@scalizer.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bitwarden", "vault", "python", "cli", "bw"]
dependencies = [
    "pexpect",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["twine", "bumpver", "pip-tools", "pytest", "check-manifest"]

[project.urls]
Homepage = "https://github.com/ScalizerOrg/s6r-bitwarden-cli"

[project.scripts]
s6r-bitwarden-cli = "s6r_bitwarden_cli.__main__:main"
